--- a/Media.html
+++ b/Media.html
@@ -8,9 +8,11 @@
                 <title>VLC Media Player</title>
             </head>
             <body>
+                <div class="boo">
+                <div class="vmp">
                     <span class="mdi mdi-vlc"></span>
                     <span class="lecteur"> VLC Media Player</span>
-                
+                </div>
                 <div class="symbols">
                     <span class="mdi mdi-minus"> </span>
                     <span class="mdi mdi-note-multiple"></span>
@@ -30,7 +32,7 @@
                 <a href="#" class="menu-link">Help</a>
              </div>
              <div>
-                <span>Playlist</span>
+                <span class="play">Playlist</span>
                 <div class="search">
                 <span class="mdi mdi-subtitles"></span>
                 <input type="search" name="" placeholder="Search">
@@ -39,16 +41,16 @@
 
             <div>
                <span class="mdi mdi-view-headline"></span>
-                <span>Playlist</span>
+                <span class="play1">Playlist</span>
                 <div class="top">
                     <span>Tilte</span>
                     <span>Duration</span>
                     <span>Album</span>
                 </div>
             </div>
-            <div>
+            <div class="Media">
                 <span class="mdi mdi-database-plus"></span>
-                <span>Media Library</span>
+                <span class="Lib">Media Library</span>
             </div>
             <div>
                 <span class="com">My Computer</span>
@@ -81,6 +83,6 @@
             </div>
 
             <div class="mdi mdi-vlc"></div>
-   
+       </div>
             </body>
 </html>
